--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.mozilla:rhino:1.7.11'
     implementation 'io.webfolder:ui4j-webkit:4.0.0'
+    implementation 'commons-codec:commons-codec:1.13'
 }
