--- a/app/src/main/assets/test.properties
+++ b/app/src/main/assets/test.properties
@@ -98,3 +98,7 @@ return shaHex.toLowerCase();
 }
 
 https://stackoverflow.com/questions/29127429/get-the-value-of-a-javascript-variable-with-java
+
+inputStream = getAssets().open("home.html");
+Document document = Jsoup.parse(inputStream, "UTF-8", "");
+RollAttribute rollAttribute = new RollAttribute(getApplicationContext(), document);
