--- a/app/src/main/assets/test.properties
+++ b/app/src/main/assets/test.properties
@@ -102,3 +102,7 @@ https://stackoverflow.com/questions/29127429/get-the-value-of-a-javascript-varia
 inputStream = getAssets().open("home.html");
 Document document = Jsoup.parse(inputStream, "UTF-8", "");
 RollAttribute rollAttribute = new RollAttribute(getApplicationContext(), document);
+
+TODO
+disable LTr
+reedem bonus & RP
