--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,15 @@
             </intent-filter>
         </activity>
         <receiver
-            android:name=".logic.BootBroadcastReceiver"
+            android:name=".logic.ServiceBroadcastReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="boot_completed" />
+                <action android:name="start_service"/>
+                <action android:name="stop_service"/>
             </intent-filter>
         </receiver>
-
         <service
             android:name=".logic.BackgroundService"
             android:enabled="true"
@@ -36,5 +37,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
