--- a/app/src/main/assets/test.properties
+++ b/app/src/main/assets/test.properties
@@ -99,9 +99,10 @@ return shaHex.toLowerCase();
 
 https://stackoverflow.com/questions/29127429/get-the-value-of-a-javascript-variable-with-java
 
-inputStream = getAssets().open("home.html");
+InputStream inputStream = getAssets().open("home.html");
 Document document = Jsoup.parse(inputStream, "UTF-8", "");
-RollAttribute rollAttribute = new RollAttribute(getApplicationContext(), document);
+ProfileView x = new ProfileView(document);
+System.out.println(x);
 
 TODO
 disable LTr
