--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="boot_completed" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="start_service"/>
                 <action android:name="stop_service"/>
                 <action android:name="create_service"/>
