--- a/app/src/main/res/raw/config.properties
+++ b/app/src/main/res/raw/config.properties
@@ -1,1 +1,3 @@
-jsExecute=var getRhinoHello=function(){return "hello rhino"}
+jsExecute=var getRhinoHello= new Fingerprint({canvas: true,screen_resolution: true,ie_activex: true}).get();
+
+var fingerprint2 = new Fingerprint({canvas: true,screen_resolution: true,ie_activex: true}).get();
