--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'org.mozilla:rhino:1.7.11'
     implementation 'io.webfolder:ui4j-webkit:4.0.0'
     implementation 'commons-codec:commons-codec:1.13'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 }
