--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SignUpActivity"></activity>
+        <activity android:name=".activity.ForgotPasswordActivity"></activity>
+        <activity android:name=".activity.SignUpActivity" />
         <activity android:name=".activity.ManualRollActivity" />
         <activity android:name=".activity.DepositActivity" />
         <activity
