--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.journeyapps:zxing-android-embedded:3.3.0'
-
+    implementation "com.airbnb.android:lottie:3.4.0"
 
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
 }
